--- a/wp-content/themes/synthetica/assets/styles/scss/style.scss
+++ b/wp-content/themes/synthetica/assets/styles/scss/style.scss
@@ -20,7 +20,7 @@
 @import "../../../node_modules/bootstrap/scss/nav";
 @import "../../../node_modules/bootstrap/scss/navbar";
 @import "../../../node_modules/bootstrap/scss/card";
-@import "../../../node_modules/bootstrap/scss/breadcrumb";
+// @import "../../../node_modules/bootstrap/scss/breadcrumb";
 @import "../../../node_modules/bootstrap/scss/pagination";
 @import "../../../node_modules/bootstrap/scss/badge";
 @import "../../../node_modules/bootstrap/scss/jumbotron";
@@ -49,4 +49,5 @@
 @import "magnific-popup";
 @import "bootsnav";
 @import "theme-style";
+@import "page-title";
 @import "responsive";
