--- a/wp-content/themes/synthetica/assets/styles/scss/style.scss
+++ b/wp-content/themes/synthetica/assets/styles/scss/style.scss
@@ -1,7 +1,11 @@
+@import "../../../node_modules/bootstrap/scss/functions";
+
+@import "variables";
+@import "functions";
+
 // @import "../../../node_modules/bootstrap/scss/bootstrap";
 
-@import "../../../node_modules/bootstrap/scss/functions";
-@import "../../../node_modules/bootstrap/scss/variables";
+// @import "../../../node_modules/bootstrap/scss/variables";
 @import "../../../node_modules/bootstrap/scss/mixins";
 @import "../../../node_modules/bootstrap/scss/root";
 @import "../../../node_modules/bootstrap/scss/reboot";
@@ -34,8 +38,6 @@
 @import "../../../node_modules/bootstrap/scss/popover";
 @import "../../../node_modules/bootstrap/scss/carousel";
 @import "../../../node_modules/bootstrap/scss/utilities";
-
-@import "variables";
 
 /* --  Fontawesome -- */
 @import "../../../node_modules/@fortawesome/fontawesome-free/scss/brands";
