--- a/wp-content/themes/synthetica/assets/styles/scss/_theme-style.scss
+++ b/wp-content/themes/synthetica/assets/styles/scss/_theme-style.scss
@@ -326,7 +326,7 @@ h6 {
 }
 
 .text-deep-pink, .btn.text-deep-pink {
-    color: #ff214f
+    color: $theme-highlight
 }
 
 /* dropcap */
@@ -424,7 +424,7 @@ blockquote .small:before, blockquote footer:before, blockquote small:before {
     top: 5px;
     position: relative;
     margin-right: 12px;
-    color: #ff214f
+    color: $theme-highlight
 }
 
 /* text link hover color */
@@ -433,7 +433,7 @@ a.text-link-white-2, a.text-link-white-2 i {
 }
 
 a.text-link-white-2:hover, a.text-link-white-2:hover i, a.text-link-white-2:focus, a.text-link-white-2:focus i {
-    color: #ff214f
+    color: $theme-highlight
 }
 
 a.text-link-black, a.text-link-black i {
@@ -457,7 +457,7 @@ a.text-link-extra-dark-gray:hover, a.text-link-extra-dark-gray:focus {
 }
 
 a.text-link-deep-pink, a.text-link-deep-pink i {
-    color: #ff214f
+    color: $theme-highlight
 }
 
 a.text-link-deep-pink:hover, a.text-link-deep-pink:hover i, a.text-link-deep-pink:focus, a.text-link-deep-pink:focus i {
@@ -474,7 +474,7 @@ a.text-black-hover:hover, a.text-black-hover:focus {
 }
 
 a.text-deep-pink-hover:hover, a.text-deep-pink-hover:focus {
-    color: #ff214f !important;
+    color: $theme-highlight !important;
 }
 
 a.text-extra-dark-gray-hover:hover {
@@ -766,7 +766,7 @@ a.text-very-light-gray-hover:hover {
 }
 
 .text-middle-line-deep-pink:before {
-    border-bottom: 1px solid #ff214f;
+    border-bottom: 1px solid $theme-highlight;
     position: absolute;
     content: "";
     width: 100%;
@@ -785,7 +785,7 @@ a.text-very-light-gray-hover:hover {
 }
 
 .text-decoration-line-through-deep-pink:before {
-    background: #ff214f;
+    background: $theme-highlight;
 }
 
 .text-decoration-line-through-black:before {
@@ -956,7 +956,7 @@ a.text-very-light-gray-hover:hover {
 }
 
 .bg-deep-pink {
-    background-color: #ff214f;
+    background-color: $theme-highlight;
 }
 
 .bg-transparent-white {
@@ -1404,7 +1404,7 @@ textarea.input-bg {
 }
 
 .new-demo {
-    background: #ff214f;
+    background: $theme-highlight;
     font-size: 10px;
     font-weight: 600;
     color: #fff;
@@ -1740,15 +1740,15 @@ textarea.input-bg {
 }
 
 .btn.btn-deep-pink {
-    background: #ff214f;
-    border-color: #ff214f;
+    background: $theme-highlight;
+    border-color: $theme-highlight;
     color: #ffffff
 }
 
 .btn.btn-deep-pink:hover, .btn.btn-deep-pink:focus {
     background: transparent;
-    border-color: #ff214f;
-    color: #ff214f
+    border-color: $theme-highlight;
+    color: $theme-highlight
 }
 
 .btn-warning, .btn-warning:hover {
@@ -1806,13 +1806,13 @@ textarea.input-bg {
 
 .btn.btn-transparent-deep-pink {
     background: transparent;
-    border-color: #ff214f;
-    color: #ff214f
+    border-color: $theme-highlight;
+    color: $theme-highlight
 }
 
 .btn.btn-transparent-deep-pink:hover, .btn.btn-transparent-deep-pink:focus {
-    background: #ff214f;
-    border-color: #ff214f;
+    background: $theme-highlight;
+    border-color: $theme-highlight;
     color: #fff
 }
 
@@ -1876,7 +1876,7 @@ textarea.input-bg {
 }
 
 .dropdown-style-1 .btn:hover, .custom-dropdown btn:focus {
-    color: #ff214f;
+    color: $theme-highlight;
 }
 
 .dropdown-style-1 .dropdown-menu {
@@ -2023,7 +2023,7 @@ textarea.input-bg {
 }
 
 .border-color-deep-pink {
-    border-color: #ff214f !important;
+    border-color: $theme-highlight !important;
 }
 
 .border-color-transparent-pink {
@@ -2144,7 +2144,7 @@ textarea.input-bg {
 }
 
 .overline-icon-box.overline-deep-pink {
-    border-top-color: #ff214f !important;
+    border-top-color: $theme-highlight !important;
 }
 
 .overline-icon-box.overline-transparent-pink {
@@ -2242,7 +2242,7 @@ textarea.input-bg {
     content: "";
     display: inline-block;
     width: 100%;
-    background: #ff214f;
+    background: $theme-highlight;
     height: 1px;
     top: 50%;
     position: absolute;
@@ -8316,7 +8316,7 @@ a.likes-count span {
 .social-icon-style-5 a:hover {
     color: #fff;
     border-radius: 100%;
-    background-color: #ff214f
+    background-color: $theme-highlight
 }
 
 /* icon hover effect style- 5 light*/
@@ -8329,7 +8329,7 @@ a.likes-count span {
 .social-icon-style-5-light a:hover {
     color: #fff;
     border-radius: 100%;
-    background-color: #ff214f
+    background-color: $theme-highlight
 }
 
 /* icon hover effect style 6 */
@@ -8343,8 +8343,8 @@ a.likes-count span {
 }
 
 .social-icon-style-6 a:hover {
-    border-color: #ff214f;
-    color: #ff214f;
+    border-color: $theme-highlight;
+    color: $theme-highlight;
     background-color: transparent;
 }
 
@@ -8374,7 +8374,7 @@ a.likes-count span {
 }
 
 .social-icon-style-8 a:hover {
-    color: #ff214f;
+    color: $theme-highlight;
 }
 
 /* icon hover effect style 9 */
@@ -10253,11 +10253,11 @@ header nav.nav-full-width {
 }
 
 .full-width-pull-menu .link-style-1 ul li:hover > a, .full-width-pull-menu .link-style-1 ul li.show > a {
-    color: #ff214f
+    color: $theme-highlight
 }
 
 .full-width-pull-menu .link-style-1 ul li:hover > a:after, .full-width-pull-menu .link-style-1 ul li.show > a:after {
-    background: #ff214f
+    background: $theme-highlight
 }
 
 .full-width-pull-menu .link-style-1 ul li a:after {
@@ -10326,11 +10326,11 @@ header nav.nav-full-width {
 }
 
 .full-width-pull-menu .link-style-2 ul li:hover > a, .full-width-pull-menu .link-style-2 ul li.show > a {
-    color: #ff214f
+    color: $theme-highlight
 }
 
 .full-width-pull-menu .link-style-2 ul li.show > a:after {
-    background: #ff214f
+    background: $theme-highlight
 }
 
 .full-width-pull-menu .link-style-2 .dropdown ul {
@@ -10505,7 +10505,7 @@ header nav.nav-box-width {
 
 .big-menu-links li a:after {
     width: 0;
-    background: #ff214f;
+    background: $theme-highlight;
     height: 3px;
     content: "";
     display: block;
@@ -11074,7 +11074,7 @@ header .sidebar-part2 nav.navbar.bootsnav ul li.dropdown > a, .sidebar-nav-style
 }
 
 header .sidebar-part2 nav.navbar.bootsnav li.dropdown ul.dropdown-menu > li a:hover {
-    border-bottom: 1px solid #ff214f;
+    border-bottom: 1px solid $theme-highlight;
     background: inherit
 }
 
@@ -11088,7 +11088,7 @@ header .sidebar-part2 nav.navbar.bootsnav ul li ul li a > i {
 }
 
 header .sidebar-part2 nav.navbar.bootsnav ul li ul li a:hover {
-    color: #ff214f
+    color: $theme-highlight
 }
 
 header .sidebar-part2 nav.navbar.bootsnav ul li ul li {
@@ -11168,7 +11168,7 @@ header .sidebar-part2 nav.navbar.bootsnav ul li ul li.dropdown {
 }
 
 header .sidebar-part2 nav.navbar.bootsnav ul.second-level li.active > a, header .sidebar-part2 nav.navbar.bootsnav ul.second-level li.active ul li.active > a {
-    color: #ff214f
+    color: $theme-highlight
 }
 
 .sidebar-part2 .navbar-collapse.collapse {
@@ -11353,7 +11353,7 @@ header.sticky nav.navbar.brand-center ul.nav > li > a {
 
 .swiper-bottom-scrollbar-full .swiper-scrollbar-drag {
     border-radius: 0;
-    background: #ff214f
+    background: $theme-highlight
 }
 
 .swiper-bottom-scrollbar-full .swiper-scrollbar {
@@ -11532,7 +11532,7 @@ header.sticky nav.navbar.brand-center ul.nav > li > a {
     cursor: move;
     position: absolute;
     content: "";
-    background: #ff214f;
+    background: $theme-highlight;
     width: 13px;
     height: 13px;
     border-radius: 100%;
@@ -11666,7 +11666,7 @@ header.sticky nav.navbar.brand-center ul.nav > li > a {
     cursor: move;
     position: absolute;
     content: "";
-    background: #ff214f;
+    background: $theme-highlight;
     width: 13px;
     height: 13px;
     border-radius: 100%;
@@ -11934,7 +11934,7 @@ header.sticky nav.navbar.brand-center ul.nav > li > a {
     line-height: 40px;
     width: 40px;
     height: 40px;
-    background-color: #ff214f;
+    background-color: $theme-highlight;
     color: #fff;
     z-index: 9;
 }
@@ -11958,7 +11958,7 @@ header.sticky nav.navbar.brand-center ul.nav > li > a {
 
 .swiper-button-prev.swiper-prev-style4, .swiper-button-next.swiper-next-style4 {
     background-image: none;
-    background: #ff214f;
+    background: $theme-highlight;
     color: #fff;
     text-align: center;
     line-height: 40px;
@@ -13712,7 +13712,7 @@ figure {
     display: inline-block;
     position: absolute;
     content: "";
-    background-color: #ff214f;
+    background-color: $theme-highlight;
     z-index: 1
 }
 
@@ -13998,11 +13998,11 @@ figure {
 
 .feature-box.feature-box-7 .box:hover .content {
     top: 0;
-    border-bottom-color: #ff214f;
+    border-bottom-color: $theme-highlight;
 }
 
 .feature-box.feature-box-7 .box:hover i {
-    color: #ff214f
+    color: $theme-highlight
 }
 
 .container .feature-box.feature-box-7 .box .content {
@@ -14035,7 +14035,7 @@ figure {
 
 .feature-box-8:hover .icon-round-small {
     background: #fff;
-    color: #ff214f !important;
+    color: $theme-highlight !important;
 }
 
 .parallax-feature-box-bottom {
@@ -14064,7 +14064,7 @@ figure {
 }
 
 .feature-box-9:hover p {
-    color: #ff214f;
+    color: $theme-highlight;
 }
 
 .feature-box-9 .text-bottom-line {
@@ -14089,7 +14089,7 @@ figure {
 }
 
 .feature-box-10:hover .number {
-    background: #ff214f;
+    background: $theme-highlight;
     color: #fff
 }
 
@@ -14225,7 +14225,7 @@ figure {
 }
 
 .feature-box-13:before {
-    background: #ff214f;
+    background: $theme-highlight;
     left: 0;
     height: 100%;
     top: 0;
@@ -14438,11 +14438,11 @@ figure {
 
 .feature-box.feature-box-17 .box:hover .content {
     top: 0;
-    border-bottom-color: #ff214f;
+    border-bottom-color: $theme-highlight;
 }
 
 .feature-box.feature-box-17 .box:hover {
-    background-color: #ff214f;
+    background-color: $theme-highlight;
 }
 
 .feature-box.feature-box-17 .box:hover i, .feature-box.feature-box-17 .box:hover .text-white-2-hover {
@@ -14494,8 +14494,8 @@ figure {
 }
 
 .counter-feature-box-1:hover {
-    background: #ff214f;
-    border-color: #ff214f;
+    background: $theme-highlight;
+    border-color: $theme-highlight;
 }
 
 /* counter box style 3 */
@@ -14662,11 +14662,11 @@ figure {
     top: 0;
     margin: 0;
     overflow: visible;
-    background: #ff214f;
-    background: -moz-linear-gradient(left, #ff214f 0%, #ffffff 100%);
-    background: -webkit-linear-gradient(left, #ff214f 0%, #ffffff 100%);
-    background: linear-gradient(to right, #ff214f 0%, #ffffff 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff214f', endColorstr='#ffffff', GradientType=1);
+    background: $theme-highlight;
+    background: -moz-linear-gradient(left, $theme-highlight 0%, #ffffff 100%);
+    background: -webkit-linear-gradient(left, $theme-highlight 0%, #ffffff 100%);
+    background: linear-gradient(to right, $theme-highlight 0%, #ffffff 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='$theme-highlight', endColorstr='#ffffff', GradientType=1);
 }
 
 .skillbar-bar-style3 .skill-bar-percent {
@@ -15150,7 +15150,7 @@ figure {
 }
 
 .tab-style1 .nav-tabs li:hover i, .tab-style1 .nav-tabs li .active i {
-    color: #ff214f;
+    color: $theme-highlight;
 }
 
 .tab-style1 .nav-tabs li:hover span, .tab-style1 .nav-tabs li .active span {
@@ -15784,7 +15784,7 @@ a img.aligncenter {
     background: #000;
     opacity: .8;
     color: #fff;
-    border-color: #ff214f
+    border-color: $theme-highlight
 }
 
 .scroll-top-arrow i {
@@ -15959,7 +15959,7 @@ aside .latest-post li figure {
 }
 
 .newsletter .btn.border-color-deep-pink {
-    border-color: #ff214f
+    border-color: $theme-highlight
 }
 
 .newsletter .btn.border-color-transparent-pink {
@@ -16082,7 +16082,7 @@ aside .latest-post li figure {
     width: 22px;
     height: 22px;
     text-align: center;
-    background: #ff214f;
+    background: $theme-highlight;
     line-height: 20px;
     border-radius: 100%;
 }
@@ -16463,7 +16463,7 @@ aside .latest-post li figure {
 
 /* home - portfolio metro */
 .text-bold-underline:before {
-    background-color: #ff214f;
+    background-color: $theme-highlight;
     height: 3px;
     width: 100%;
     position: absolute;
@@ -16685,7 +16685,7 @@ aside .latest-post li figure {
     -webkit-transition-duration: .2s;
     -o-transition-duration: .2s;
     right: 0px;
-    background: #ff214f
+    background: $theme-highlight
 }
 
 .buy-theme span, .all-demo span {
